[project]
name = "nearwash"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Taylor Monacelli", email = "taylormonacelli@gmail.com" }
]
dependencies = [
    "jinja2>=3.1.3",
    "ipaddress>=1.0.23",
    "psutil>=5.9.8",
    "netifaces>=0.11.0",
    "scapy>=2.5.0",
    "pyroute2>=0.7.12",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
nearwash = "nearwash:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nearwash"]

[tool.ruff.lint]
extend-select = ["I"]
